# polymarket-trading-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
src/polybot/: __init__.py  api.py  bot.py  cli.py  config.py  logging_utils.py  persistence.py  risk.py  schemas.py
src/polybot/clob/: __init__.py  client.py  orders.py
src/polybot/markets/: __init__.py  gamma.py
src/polybot/strategies/: __init__.py  base.py  mean_revert.py  momentum.py  news_edge.py
tests/: conftest.py  test_bot.py  test_gamma_live.py
